tests/positive/WildcardArguments.juvix
module WildcardArguments;

fn {A : Type} (a _ _ : A) : A := a;
