tests/negative/Internal/ExpectedExplicitArgument.juvix
module ExpectedExplicitArgument;

type T (A : Type) :=
  | c : A → T A;

f : {A : Type} → A → T A;
f {A} a := c {A} {a};
